# pymt5

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
analysis/: 1qg0UVO2.js  AlpjgL96.js  B2yrbsia.js  BBEi3ZNU.js  BYK4z1le.js  C-ko_GKs.js  CqKvBoRN.js  CuLcSWwq.js  D8ROuLSQ.js  DMtZQUDi.js  DOwdM2Va.js  DWBpMhKx.js  Dpfv1pCY.js  Drnxhjp7.js  DtUlhiPz.js  FVu1wCCW.js  ZYLecGqE.js  d_ed_6Ut.js  deep_protocol.py  extract_commands.py  extract_crypto.py  extract_protocol.py  lN1-SaTO.js  r6gFvn7P.js
docs/: api.rst  changelog.rst  command_coverage.rst  conf.py  index.rst  iteration_plan.rst  iteration_plan_v2.rst  iteration_plan_v3.rst  iteration_plan_v4.rst  iteration_plan_v5.rst  protocol_reference.rst  push_notifications.rst  python_api_compat.rst  python_api_detailed_comparison.rst  quickstart.rst  trading.rst
examples/: 01_connect_and_account.py  02_market_data.py  03_realtime_ticks.py  04_trading.py  05_order_book.py  06_all_push_notifications.py  07_all_order_types.py  08_misc_features.py
pymt5/: __init__.py  _account.py  _currency.py  _dataframe.py  _logging.py  _market_data.py  _metrics.py  _order_helpers.py  _order_manager.py  _parsers.py  _pool.py  _push_handlers.py  _rate_limiter.py  _subscription.py  _trading.py  _validation.py  client.py  constants.py  crypto.py  events.py  exceptions.py  helpers.py  protocol.py  schemas.py  transport.py  types.py
scripts/: live_test.py  live_test_client.py  live_test_symbols.py  live_test_v2.py  live_test_v3.py  live_test_v4.py
tests/: test_benchmarks.py  test_client_async.py  test_client_features.py  test_client_lifecycle.py  test_coverage_gaps.py  test_fuzz.py  test_helpers.py  test_integration.py  test_market_data_coverage.py  test_new_modules.py  test_onboarding_commands.py  test_phase19.py  test_phase20_21.py  test_phase_15_16.py  test_protocol_smoke.py  test_push_handlers.py  test_remaining_coverage.py  test_trading_coverage.py  test_transport.py  test_transport_lifecycle.py  test_validation.py
